@@ -1,3 +1,4 @@
+* Manage named separator as label
 * Add MultiSelection entry to Dict field
 * Position new record based on order
 * Allow relation field to be selected in CSV export
